# Wormhole

./: .SRCINFO  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Innovation_track.md  Milestones.md  PKGBUILD  PKGBUILD.old  README.md  README_FR.md  beta_test_plan.md  build.rs  context.md  crates.js  docker-compose.yml  flake.nix  generate-docker-compose.sh  help.html  idees_all.md  index.html  mkvirtuals.sh  non-technical.md  open-create  ordre.md  search-index.js  settings.html  src-files.js  start-docker.sh  style_md.css  technical_spec.md  tri.md  winfsp_impl.rs  wormhole-service.service  wormhole.service  write  write-bad-perm
.github/: installer.iss  release-drafter-major.yml  release-drafter-minor.yml  release-major.yml  release-minor.yml
.github/workflow/: mirror.yml
.github/workflows/: ci-nix-format.yml  ci-nix-pipeline.yml  ci-pipeline.yml  docs.yml  mirror.yml  release-drafter-major.yml  release-drafter-minor.yml  release-major.yml  release-minor.yml  release.yml
.wormhole/: config.toml  network.toml
docs/: beta_test_plan.md  beta_test_plan1.md  btp_exemple.md  memo_cli.md
docs/beta-testing/: KPI-report.md  beta_test_plan(maybe_old).md  beta_test_plan.md
docs/dev/: packages.md
docs/getting-started/: docker_guide.md  getting-started.md  getting_started.md  install.md  installation.md  memo_cli.md  testing_environement_installation.md
docs/technical/: technical_spec.md
docs/technical/architecture/: code_architecture.md
docs/technical/configuration/: global_conf.md  local_conf.md  pod_conf.md
docs/uml/: new.uxf  threads.uxf
docs/user-guide/: glossary.md
nix/: package.nix
search.desc/wormhole/: wormhole-desc-0-.js
search.desc/wormhole_cli/: wormhole_cli-desc-0-.js
search.desc/wormhole_service/: wormhole_service-desc-0-.js
search.desc/wormholed/: wormholed-desc-0-.js
service/: wormhole.service
spec/: main.md  technical_spec_fr.md
spec/Architecture/: architecture_code.md  architecture_logique.md  logical_architecture.md
spec/configuration/: WormholeFile.md  ideas.md  main_conf.md  pod_conf.md
spec/details/: glossary.md
spec_fr/configuration/: WormholeFile.md  conf_principal.md  idees.md  pod_conf.md
spec_fr/details/: glossary.md
src/: error.rs  file_config.rs  init.rs  join.rs  lib.rs  main.rs  signals.rs  test.toml
src/commands/: cli_commands.rs  default_global_config.rs  default_local_config.rs  init.rs  join.rs  message.rs  mod.rs  register.rs  remove.rs  unregister.rs
src/commands/cli/: apply.rs  get_hosts.rs  init.rs  join.rs  message.rs  mod.rs  new.rs  register.rs  reload.rs  remove.rs  restore.rs  start.rs  status.rs  stop.rs  templates.rs  tree.rs
src/commands/service/: apply.rs  config.rs  init.rs  join.rs  mod.rs  new.rs  remove.rs  restore.rs  start.rs  stop.rs  tree.rs
src/commands/templates/: default_global_config.rs  default_local_config.rs  mod.rs  pod_config.rs  templates.rs
src/config/: mod.rs  parser.rs  types.rs
src/data/: metadata.rs  mod.rs  readers.rs  tree_hosts.rs
src/fuse/: fuse_impl.rs  linux_attrs.rs  linux_mknod.rs  mod.rs  start.rs
src/network/: forward.rs  handshake.rs  ip.rs  message.rs  mod.rs  peer_ipc.rs  peers_operations.rs  router.rs  server.rs  start_sync.rs  watchdogs.rs  watchdogs.rs.old
src/pod/: mod.rs  pod.rs
src/pod/executors/: readers.rs
src/providers/: fs_attr.rs  helpers.rs  mod.rs  mypath.rs  readers.rs  whpath.rs  writers.rs
src/providers.old/: helpers.rs  mod.rs  readers.rs
src/winfsp/: mod.rs  traits.rs  winfsp_impl.rs
src/wormhole/: error.rs.html  lib.rs.html
src/wormhole/commands/: cli_commands.rs.html  default_global_config.rs.html  default_local_config.rs.html  init.rs.html  join.rs.html  mod.rs.html  register.rs.html  remove.rs.html  unregister.rs.html
src/wormhole/config/: mod.rs.html  parser.rs.html  types.rs.html
src/wormhole/data/: metadata.rs.html  (+2 more)
src/wormhole_cli/: cli.rs.html
src/wormhole_service/: service.rs.html
src/wormholed/: service.rs.html
tests/: additional_tests.rs  arbo_tests.rs  mypath_test.rs  tests.rs  whpath_test.rs
tests/functionnal/: environment_manager.rs  environnement_manager.rs  mod.rs  test_base_files.rs  test_sending_files_on_stop.rs  test_sync.rs  test_transfer.rs
tests/test_data/: mod.rs
tests/unit/: arbo_tests.rs  mod.rs  testing_utilities_tests.rs  whpath_test.rs
trait.impl/fuser/: trait.Filesystem.js
type.impl/std/: primitive.u64.js
uml/: new.uxf  simple.uxf
wormhole/: all.html  constant.INSTANCE_PATH.html  index.html  sidebar-items.js
wormhole/commands/: enum.Mode.html  fn.init.html  fn.join.html  fn.register.html  fn.remove.html  fn.templates.html  fn.unregister.html  index.html  sidebar-items.js
wormhole/config/: index.html  sidebar-items.js
wormhole/data/: index.html  sidebar-items.js
wormhole/error/: enum.CliError.html  enum.CliSuccess.html  enum.WhError.html  index.html  sidebar-items.js  type.CliResult.html  type.WhResult.html
wormhole/fuse/: index.html  sidebar-items.js
wormhole/network/: index.html  sidebar-items.js
wormhole/providers/: index.html  sidebar-items.js  struct.Provider.html  type.FsIndex.html
wormhole_cli/: all.html  enum.Cli.html  fn.main.html  index.html  sidebar-items.js  struct.CreateArgs.html  struct.JoinArgs.html  struct.PodArgs.html  struct.RemoveArgs.html  struct.TemplateArg.html
wormhole_service/: all.html  fn.local_cli_watchdog.html  fn.main.html  index.html  sidebar-items.js
wormholed/: all.html  constant.DEFAULT_ADDRESS.html  constant.MAX_PORT.html  constant.MAX_TRY_PORTS.html  enum.CliListenerError.html  fn.get_cli_command.html  fn.handle_cli_command.html  fn.handle_signals.html  fn.handle_signals_unix.html  fn.main.html  fn.start_cli_listener.html  fn.terminal_watchdog.html  index.html  sidebar-items.js  type.CliTcpWriter.html
(+226 files in other folders)
