[package]
name = "wormhole"
version = "0.1.0"
authors = [
    "Axel Denis <axel.denis@epitech.eu>",
    "Julian Scott <julian.scott@epitech.eu>",
    "Ludovic De Chavagnac <ludovic.de-chavagnac@epitech.eu>",
    "Arthur Aillet <arthur.aillet@epitech.eu>",
]
description = "Wormhole is a data decentralisation solution. It aims to create one single virtual storage space between many computers."
edition = "2021"
include = [
    "/Cargo.toml",
    "/LICENSE.txt",
    "README.md",
    "/src/**",
    "/tests/**",
]
keywords = ["wormhole", "storage"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
repository = "https://github.com/Agartha-Software/Wormhole"
rust-version = "1.86.0"


[lib]
name = "wormhole"
path = "src/lib.rs"

[[bin]]
name = "wormhole"
path = "src/bin/cli.rs"

[[bin]]
name = "wormholed"
path = "src/bin/service.rs"

[target.'cfg(windows)'.dependencies.winfsp]
default-features = false
features = ["stable", "system", "windows-rs-error", "handle-util"]
version = "0.11.3"

[target.'cfg(windows)'.build-dependencies.winfsp]
default-features = false
features = ["stable", "windows-rs-error", "delayload"]
version = "0.11.3"

[target.'cfg(unix)'.dependencies]
fuser = "0.15.1"
openat = "0.1.21"

[patch.crates-io]
winfsp = { git = 'https://github.com/syborg64/winfsp-rs.git', branch = "feat/drop-glue" }
winfsp-sys = { git = 'https://github.com/syborg64/winfsp-rs.git', branch = "feat/drop-glue" }

[target.'cfg(windows)'.dependencies]
winfsp-sys = "0.2.2"
windows-permissions = "0.2.4"
winapi = "0.3.9"
ntapi = "0.4.1"
nt-time = "0.10.6"
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32",
    "Wdk_Storage_FileSystem",
    "Wdk_System",
    "Wdk_System_SystemServices",
] }

[dependencies]
clap = { version = "4.5.8", features = ["cargo", "derive"] }
libc = "0.2.155"
pkg-config = "0.3.30"
walkdir = "2.5.0"
serde = { version = "1.0.203", features = ["derive", "rc"] }
toml = "0.8.14"
log = "0.4.22"
tokio = { version = "1.38.0", default-features = false, features = [
    "io-std",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
] }
tokio-tungstenite = "^0.27"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
env_logger = "0.11.3"
notify = "6.1.1"
bincode = "1.3.3"
tokio-stream = "0.1.16"
predicates = "3.1.2"
serde_with = "3.11.0"
parking_lot = "0.12.3"
sysinfo = "0.34.2"
custom_error = "1.9.2"
signal-hook = "0.3.18"
futures = "0.3"
gethostname = "1.0.2"

[dev-dependencies]
assert_fs = "1.1.2"
dir-diff = "0.3.3"
serial_test = "3.2.0"
tokio = { version = "1.38.0", default-features = false, features = ["process"] }
lazy_static = "1.5.0"
